--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,7 @@ body {
   font-family: "Rubik";
 }
 h1 {
-  @apply text-2xl font-bold text-red-500;
+  @apply text-2xl font-bold text-green-500;
 }
 h2 {
   @apply text-xl font-bold my-4;
