--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,3 +60,12 @@ input, select, textarea {
 .btn-green {
  @apply rounded px-3 py-2 bg-gray-200 hover:bg-green-500 hover:text-black;
 }
+
+
+.btn-invoice-unpaid{
+@apply rounded px-3 py-2 bg-green-200 hover:bg-green-500 hover:text-black;
+}
+
+.btn-invoice-paid{
+@apply rounded px-3 py-2 bg-red-200 hover:bg-red-500 hover:text-black;
+}
