--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,6 +61,10 @@ input, select, textarea {
  @apply rounded px-3 py-2 bg-gray-200 hover:bg-green-500 hover:text-black;
 }
 
+.btn-download{
+  @apply rounded px-3 py-2 bg-blue-600 hover:bg-green-500 hover:text-black;
+}
+
 
 .btn-invoice-unpaid{
 @apply rounded px-3 py-2 bg-green-200 hover:bg-green-500 hover:text-black;
